--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: 'gastonmichel'
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       -
         name: Build and push to python DockerHub
         uses: docker/build-push-action@v2
