--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -25,14 +25,14 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: gastonmichel/cdk
+          tags: ${{ secrets.DOCKER_USERNAME }}/cdk
           target: build
       -
         name: Build and push python tag to DockerHub
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: gastonmichel/cdk:python
+          tags: ${{ secrets.DOCKER_USERNAME }}/cdk:python
           target: python
 
 # TODO: add another languages tags for more flavours
